[gd_scene load_steps=10 format=3 uid="uid://cco0rdxcn2lsb"]

[ext_resource type="Script" uid="uid://dj3ywfk1tl65h" path="res://scripts/license.gd" id="1_nr7e0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjujm"]
bg_color = Color(0.136623, 0.372036, 0.999999, 1)
border_width_left = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.0483259, 0.283656, 1, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 30.0
expand_margin_right = 30.0
shadow_color = Color(0.0375193, 0.275378, 1, 0.6)
shadow_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_nr7e0"]
font_size = 45
font_color = Color(0.69765, 0.494659, 0.034193, 1)
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qk70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m752r"]
bg_color = Color(2.40654e-08, 0.280974, 0.196912, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0.282, 0.196, 0.286)
border_blend = true
corner_radius_top_left = 150
corner_radius_bottom_right = 150
shadow_color = Color(0, 0.282, 0.196, 0.757)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lqpe"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1q4ux"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_4qkpu"]
Button/colors/font_color = Color(0.572549, 0, 0, 1)
Button/colors/font_focus_color = Color(1, 0, 0, 1)
Button/colors/font_hover_color = Color(1, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(1, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 0, 0, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 35
Button/styles/focus = SubResource("StyleBoxEmpty_6qk70")
Button/styles/hover = SubResource("StyleBoxFlat_m752r")
Button/styles/normal = SubResource("StyleBoxFlat_2lqpe")
Button/styles/pressed = SubResource("StyleBoxFlat_1q4ux")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6v15"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
expand_margin_left = 35.0
expand_margin_right = 35.0
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[node name="License" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nr7e0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 7
visible = false

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kjujm")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Lizenzen Info
-------------------------------------------------------"
label_settings = SubResource("LabelSettings_nr7e0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2
theme_override_colors/background_color = Color(0.137255, 0.372549, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.778717, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
editable = false
emoji_menu_enabled = false
selecting_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true
scroll_v_scroll_speed = 40.0
scroll_past_end_of_file = true

[node name="back" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4qkpu")
theme_override_constants/outline_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_a6v15")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a6v15")
theme_override_styles/normal = SubResource("StyleBoxFlat_a6v15")
text = "Zur√ºck"

[connection signal="visibility_changed" from="CanvasLayer" to="." method="_on_canvas_layer_visibility_changed"]
[connection signal="focus_entered" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/back" to="." method="_on_back_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
